# osu

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE.txt  Makefile  README.txt  cmake_install.cmake  osu.files  osu.includes
cmake/modules/: FindGLEW.cmake
core/: CMakeLists.txt  Makefile  audio.cpp  audio.h  beatmap.cpp  beatmap.h  cmake_install.cmake  main.cpp  osugame.cpp  osugame.h  osurenderer.cpp  osurenderer.h  primitive.cpp  primitive.h  shaderprogram.cpp  shaderprogram.h  vec.h  vsml.cpp  vsml.h
core/libmad-prefix/src/libmad-build/: Makefile  config.status  libmad.list  libtool
core/libmad-prefix/src/libmad-build/.deps/: bit.Plo  decoder.Plo  fixed.Plo  frame.Plo  huffman.Plo  layer12.Plo  layer3.Plo  stream.Plo  synth.Plo  timer.Plo  version.Plo
core/libmad-prefix/src/libmad-build/.libs/: libmad.so.0.2.1
core/libmad-prefix/src/libmad-build/msvc++/: Makefile
core/libmad-prefix/tmp/: libmad-cfgcmd.txt
core/libmpg123-prefix/src/libmpg123-build/: Makefile  config.status  libtool
core/libmpg123-prefix/src/libmpg123-build/doc/: Makefile
core/libmpg123-prefix/src/libmpg123-build/src/: Makefile  config.h  mpg123
core/libmpg123-prefix/src/libmpg123-build/src/.deps/: audio.Po  buffer.Po  common.Po  compat.Po  control_generic.Po  equalizer.Po  genre.Po  getlopt.Po  httpget.Po  local.Po  metaprint.Po  module.Po  mpg123.Po  playlist.Po  resolver.Po  streamdump.Po  term.Po  wav.Po  xfermem.Po
core/libmpg123-prefix/src/libmpg123-build/src/libmpg123/: Makefile  compat.lo  dct36_3dnow.lo  dct36_3dnowext.lo  dct64.lo  dct64_3dnow.lo  dct64_3dnowext.lo  dct64_i386.lo  dct64_mmx.lo  dct64_sse.lo  dct64_sse_float.lo  dither.lo  equalizer.lo  equalizer_3dnow.lo  feature.lo  format.lo  getcpuflags.lo  icy.lo  icy2utf8.lo  id3.lo  index.lo  layer1.lo  layer2.lo  layer3.lo  lfs_alias.lo  lfs_wrap.lo  libmpg123.la  libmpg123.lo  ntom.lo  optimize.lo  parse.lo  readers.lo  stringbuf.lo  synth.lo  synth_3dnow.lo  synth_3dnowext.lo  synth_8bit.lo  synth_i586.lo  synth_i586_dither.lo  synth_mmx.lo  (+9 more)
core/libmpg123-prefix/src/libmpg123-build/src/libmpg123/.deps/: compat.Plo  dct36_3dnow.Plo  dct36_3dnowext.Plo  dct64.Plo  dct64_3dnow.Plo  dct64_3dnowext.Plo  dct64_i386.Plo  dct64_mmx.Plo  dct64_sse.Plo  dct64_sse_float.Plo  dither.Plo  equalizer.Plo  equalizer_3dnow.Plo  feature.Plo  format.Plo  frame.Plo  getcpuflags.Plo  icy.Plo  icy2utf8.Plo  id3.Plo  index.Plo  layer1.Plo  layer2.Plo  layer3.Plo  lfs_alias.Plo  lfs_wrap.Plo  libmpg123.Plo  ntom.Plo  optimize.Plo  parse.Plo  readers.Plo  stringbuf.Plo  synth.Plo  synth_3dnow.Plo  synth_3dnowext.Plo  synth_8bit.Plo  synth_i586.Plo  synth_i586_dither.Plo  synth_mmx.Plo  synth_real.Plo  (+8 more)
core/libmpg123-prefix/src/libmpg123-build/src/libmpg123/.libs/: libmpg123.exp  libmpg123.ver
core/libmpg123-prefix/src/libmpg123-build/src/output/: Makefile  output_alsa.la  output_alsa_la-alsa.lo  output_arts.la  output_arts_la-arts.lo  output_dummy.la  output_dummy_la-dummy.lo  output_esd.la  output_esd_la-esd.lo  output_nas.la  output_nas_la-nas.lo  output_openal.la  output_openal_la-openal.lo  output_oss.la  output_oss_la-oss.lo  output_pulse.la  output_pulse_la-pulse.lo  output_sdl.la  output_sdl_la-sdl.lo
core/libmpg123-prefix/src/libmpg123-build/src/output/.deps/: output_alsa_la-alsa.Plo  output_arts_la-arts.Plo  output_dummy_la-dummy.Plo  output_esd_la-esd.Plo  output_nas_la-nas.Plo  output_openal_la-openal.Plo  output_oss_la-oss.Plo  output_pulse_la-pulse.Plo  output_sdl_la-sdl.Plo
core/libmpg123-prefix/src/libmpg123-build/src/output/.libs/: output_arts.la  output_arts.lai  output_dummy.lai  output_esd.la  output_nas.la  output_openal.lai  output_oss.lai
core/libmpg123-prefix/tmp/: libmpg123-cfgcmd.txt.in
core/libopenal-prefix/src/libopenal-build/: CMakeCache.txt  Makefile  cmake_install.cmake  config.h  install_manifest.txt  openal-info  openal.pc
core/libopenal-prefix/tmp/: libopenal-cfgcmd.txt  libopenal-cfgcmd.txt.in
core/shaders/: background.glsl  progress.glsl  solid.glsl  solid.h
desktop/: CMakeLists.txt  Makefile  cmake_install.cmake  glwidget.cpp  glwidget.h  main.cpp  mainwindow.ui  moc_glwidget.cxx_parameters  moc_mainwindow.cxx_parameters
songs/Heaven/: Envy - Heaven (Charles445) [Easy].osu  Envy - Heaven (Charles445) [Insane].osu  Envy - Heaven (Charles445) [MM's Taiko].osu  Envy - Heaven (Charles445) [Normal].osu  Envy - Heaven (Charles445) [Snickerz Hard].osu
songs/tmp/: DCX - Flying High (DJ Splash Remix) (jericho2442) [H-MiX].osu  DCX - Flying High (DJ Splash Remix) (jericho2442) [HardCore Rave!!!].osu  DCX - Flying High (DJ Splash Remix) (jericho2442) [SoftRave].osu  DCX - Flying High (DJ Splash Remix) (jericho2442) [Ultimate's CrazyRave].osu  Dj Splash - Flying High (jericho2442).osb
